--- a/parazyler/web/app.css
+++ b/parazyler/web/app.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 208 100% 13.3%;
     --foreground: 213 0% 4%;
     --muted: 213 0% 96%;
     --muted-foreground: 213 0% 45%;
@@ -54,6 +56,6 @@
     @apply border-border;
   }
   body {
-    @apply font-sans antialiased bg-background text-foreground;
+    @apply font-mono antialiased bg-background text-foreground text-white;
   }
 }
